# PedigreeApp2

./: .gitignore  BUILD_INSTRUCTIONS.md  GITHUB_ACTIONS_GUIDE.md  README.md  build.gradle.kts  build_test.sh  settings.gradle.kts
.github/workflows/: build-apk.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.c
app/src/main/java/com/example/pedigreeapp/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  data_extraction_rules.xml
